# gdbdbg

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  README.txt  dbg.py  dockerbuild.sh  gdb-command.txt  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  deploy-package-action.yml  github-release.yml  package-action.yml  pre-commit-action.yml  release.yml  test-action.yml  test-package-action.yml
.pre-commit-hooks/: check_changelog_entries.py  copyright_headers.py
scripts/: dockerbuild.sh
src/gdbdbg/: __init__.py  build.py  dbg.py  gdbinit.py  inject.py  util.py
src/relenv_gdb/: __init__.py  build.py  dbg.py  gdbinit.py  inject.py  util.py
tests/: test_relenv_gdb.py
