[metadata]
name = relenv-gdb
version = 0.1.0
author = Daniel A. Wozniak
author_email = <dwozniak@vmware.com>
description = gdb debugger for relenv
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/saltstack/relative-environment-for-python-gdb
    Bug Tracker = https://github.com/saltstack/relative-environment-for-python-gdb/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.10
include_package_data = True

[options.packages.find]
where=src

[options.package_data]
*=gdb/**

[options.entry_points]
console_scripts =
  relenv-gdb = relenv_gdb.gdbinit:main
